@@ -52,6 +52,7 @@
 
 - (id)initWithFrame: (NSRect) aFrame;
 - (void) dealloc;
+- (BOOL)acceptsFirstResponder;
 
 // contextual menu
 - (NSMenu *) menuForEvent: (NSEvent *) theEvent;
